fix llama-cpp-python install

--- a/solar-uncensored/.vscode/settings.json
+++ b/solar-uncensored/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
 	"python.analysis.autoImportCompletions": true,
 	"python.analysis.typeCheckingMode": "off",
-	"editor.defaultFormatter": "charliermarsh.ruff"
+	"[python]": {
+		"editor.defaultFormatter": "charliermarsh.ruff"
+	}
 }
