--- a/solar-uncensored/cog.yaml
+++ b/solar-uncensored/cog.yaml
@@ -11,17 +11,24 @@ build:
   #   - "libglib2.0-0"
 
   # python version in the form '3.11' or '3.11.4'
-  python_version: "3.12"
+  python_version: "3.11"
 
   # a list of packages in the format <package-name>==<version>
   python_packages:
   #   - "numpy==1.19.4"
   #   - "torch==1.8.0"
   #   - "torchvision==0.9.0"
-    - "llama-cpp-python==0.2.32"
+    - diskcache==5.6.3
+    - Jinja2==3.1.3
+    - llama_cpp_python==0.2.32
+    - MarkupSafe==2.1.4
+    - numpy==1.26.3
+    - typing_extensions==4.9.0
+
 
   # commands run after the environment is setup
-  # run:
+  run:
+    - CMAKE_ARGS="-DLLAMA_CUBLAS=on" pip install --force-reinstall llama-cpp-python
   #   - "echo env is ready!"
   #   - "echo another command if needed"
 
